--- a/blog/templates/blog/main.html
+++ b/blog/templates/blog/main.html
@@ -36,20 +36,24 @@
              {% block main_section %}
             {% endblock%}
          </div>
+
          <asside class="col-md-4">
-             <div class="bg-success p-3 rounded">
-                 <h3><b>Интересные статьи</b></h3>
+             <div class="p-3">
+                 <h3><b>Интересные статьи о Ларневске</b></h3>
+                 <img src="https://cs4.pikabu.ru/post_img/2016/05/28/7/1464430702122688257.jpg" class="img-thumbnail mb-1">
+                 <img src="https://forum.vgd.ru/file.php?a=preview&fid=378432&key=717775146" class="img-thumbnail mb-1">
                  <p>Это поселение было основано Ханенками в середине 19 века. А началось с того, что на речке Ларень решено было построить винокуренный завод.
                      Перегородили речку, сделали запруду, поселили хутор, который перерос в деревню, и стала она называться Ларневском.
-                     По статическим данным в 1858 году здесь было 18 дворов, в 1892 было 33, в 1897 году – 44 с населением 328 жителей.
-                     Ради достоверности следует отметить, что в Ларневске было еще одно дворянское поместье. Им владели Пригоровские – потомки казачьего сотенного атамана, менее богатые и менее знаменитые.
-                     Построенный при пруде винокуренный завод давал владельцем свыше 6400 ведер водки в год в 60-х годах 19 века.
-                     Известно также, что Богдан Иванович Ханенко, среди многочисленных имений которого была деревня Ларневск, был женат на дочери статского советника Н.А.Терещенко, относившегося к дворянскому роду.
                  </p>
+                 <a href="http://www.puteshestvie32.ru/content/d-larnevsk" target="_blank">
+                     <button class="btn btn-warning">Прочитать</button>
+                 </a>
              </div>
                  <div class="p-3 mb-3">
-                     <img src="https://cs4.pikabu.ru/post_img/2016/05/28/7/1464430702122688257.jpg" class="img-thumbnail">
-                     <img src="https://cs4.pikabu.ru/post_img/2016/05/28/7/146443089311094856.jpg" class="img-thumbnail">
+                     <img src="https://cs4.pikabu.ru/post_img/2016/05/28/7/146443089311094856.jpg" class="img-thumbnail mb-2">
+                     <a href="https://pikabu.ru/story/larnevsk__proshloe_moy_malenkiy_fotopokhod_4230408" target="_blank">
+                     <button class="btn btn-warning">Посмотреть</button>
+                     </a>
                  </div>
 
          </asside>
