--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -12,3 +12,17 @@
     {% endfor%}
 {% endblock main_section %}
 
+
+{% block aside_news_section %}
+         <h3><b>Интересные статьи о Ларневске</b></h3>
+                 <img src="https://cs4.pikabu.ru/post_img/2016/05/28/7/1464430702122688257.jpg" class="img-thumbnail mb-1">
+                 <p>Это поселение было основано Ханенками в середине 19 века. А началось с того, что на речке Ларень решено было построить винокуренный завод.
+                     Перегородили речку, сделали запруду, поселили хутор, который перерос в деревню, и стала она называться Ларневском.
+                 </p>
+                 <a href="http://www.puteshestvie32.ru/content/d-larnevsk" target="_blank">
+                     <button class="btn btn-warning">Прочитать</button>
+                 </a>
+{% endblock aside_news_section%}
+
+
+
