--- a/blog/templates/blog/main.html
+++ b/blog/templates/blog/main.html
@@ -34,27 +34,30 @@
      <div class="row">
          <div class="col-md-8">
              {% block main_section %}
-            {% endblock%}
+             {% endblock%}
          </div>
 
          <asside class="col-md-4">
              <div class="p-3">
-                 <h3><b>Интересные статьи о Ларневске</b></h3>
-                 <img src="https://cs4.pikabu.ru/post_img/2016/05/28/7/1464430702122688257.jpg" class="img-thumbnail mb-1">
-                 <img src="https://forum.vgd.ru/file.php?a=preview&fid=378432&key=717775146" class="img-thumbnail mb-1">
-                 <p>Это поселение было основано Ханенками в середине 19 века. А началось с того, что на речке Ларень решено было построить винокуренный завод.
-                     Перегородили речку, сделали запруду, поселили хутор, который перерос в деревню, и стала она называться Ларневском.
-                 </p>
-                 <a href="http://www.puteshestvie32.ru/content/d-larnevsk" target="_blank">
-                     <button class="btn btn-warning">Прочитать</button>
-                 </a>
+                 {% block aside_news_section %}
+                 {% endblock aside_news_section%}
              </div>
-                 <div class="p-3 mb-3">
+
+               <div class="p-3 mb-3">
+                     <img src="https://forum.vgd.ru/file.php?a=preview&fid=378432&key=717775146" class="img-thumbnail mb-1">
+                   <p>Старая почта в Ларневске. Фото Людмилы Третьяковой (Хабренко)
+                   </p>
+                     <a href="https://forum.vgd.ru/792/88662/" target="_blank">
+                     <button class="btn btn-warning">Посмотреть</button>
+                     </a>
+                 </div>
+
+                  <div class="p-3 mb-3">
                      <img src="https://cs4.pikabu.ru/post_img/2016/05/28/7/146443089311094856.jpg" class="img-thumbnail mb-2">
                      <a href="https://pikabu.ru/story/larnevsk__proshloe_moy_malenkiy_fotopokhod_4230408" target="_blank">
                      <button class="btn btn-warning">Посмотреть</button>
                      </a>
-                 </div>
+                  </div>
 
          </asside>
      </div>
