--- a/blog/templates/blog/contacts.html
+++ b/blog/templates/blog/contacts.html
@@ -1,5 +1,18 @@
 {% extends  'blog/main.html' %}
 {% block main_section %}
    <h3>Страница с контактами</h3>
+    <p>
+        <img src="https://static-maps.yandex.ru/1.x/?l=map&ll=31.514724,53.14873&size=537,275&z=14" class="img-thumbnail mb-1">
+    </p>
+   <h4>Координаты:   53°8'54"N   31°30'44"E</h4>
 {% endblock main_section %}
 
+{% block aside_news_section %}
+       <h3><b>Интересные статьи о Ларневске</b></h3>
+                 <img src="https://forum.vgd.ru/file.php?a=preview&fid=378432&key=717775146" class="img-thumbnail mb-1">
+                 <p>Старая почта в Ларневске. Фото Людмилы Третьяковой (Хабренко)
+                 </p>
+                 <a href="https://forum.vgd.ru/792/88662/" target="_blank">
+                     <button class="btn btn-warning">Прочитать</button>
+                 </a>
+{% endblock aside_news_section%}
