--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -1,14 +1,16 @@
 {% extends  'blog/main.html' %}
 {% block main_section %}
    {% for post in news%}
+   <div class="alert alert-light">
       <h1>{{ post.title}}</h1>
       <p>{{ post.text}}</p>
+       <span class="text-muted">Публикация:{{post.date}}</span>
      {% if post.autor%}
-      <p>Автор:{{ post.autor}}</p>
+       <p><b>Автор:</b><mark>Админ</mark></p>
      {% else%}
-    <p>Автор: Admin</p>
+       <p><b>Автор:</b><mark>Админ</mark></p>
      {% endif%}
-      <p>Дата:{{post.date}}</p>
+   </div>
     {% endfor%}
 {% endblock main_section %}
 
