--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -4,9 +4,9 @@
    <div class="alert alert-light">
       <h1>{{ post.title}}</h1>
       <p>{{ post.text}}</p>
-       <span class="text-muted">Публикация:{{post.date}}</span>
+       <span class="text-muted"><b>Дата: </b>{{post.date|date:" j F Y ,время: H:i:s"}}</span>
      {% if post.autor%}
-       <p><b>Автор:</b><mark>Админ</mark></p>
+       <p><b>Автор:</b><mark>{{ post.avtor }}</mark></p>
      {% else%}
        <p><b>Автор:</b><mark>Админ</mark></p>
      {% endif%}
