--- a/blog/templates/blog/main.html
+++ b/blog/templates/blog/main.html
@@ -29,7 +29,7 @@
       </ul>
     </div>
     <div class="navbar-nav">
-        <a href="" class="btn btn-outline-secondary mr-2">Регистрация</a>
+        <a href=" {% url 'reg' %} " class="btn btn-outline-secondary mr-2">Регистрация</a>
         <a href="" class="btn btn-outline-secondary mr-2">Войти</a>
     </div>
   </nav>
