--- a/users/templates/users/registration.html
+++ b/users/templates/users/registration.html
@@ -7,6 +7,8 @@
           {{ form.as_p }}
           <button type="submit" class="btn btn-outline-warning">Зарегистрироваться</button>
       </form>
+      <hr>
+      Уже зарегистрированы?<a href="">Войти в личный кабинет</a>
   </div>
 {% endblock main_section %}
 
