--- a/blog/templates/blog/main.html
+++ b/blog/templates/blog/main.html
@@ -30,7 +30,7 @@
     </div>
     <div class="navbar-nav">
         <a href=" {% url 'reg' %} " class="btn btn-outline-secondary mr-2">Регистрация</a>
-        <a href="" class="btn btn-outline-secondary mr-2">Войти</a>
+        <a href=" {% url 'user' %} " class="btn btn-outline-secondary mr-2">Войти</a>
     </div>
   </nav>
   <main class="container">
