--- a/blog/templates/blog/main.html
+++ b/blog/templates/blog/main.html
@@ -30,11 +30,11 @@
     </div>
     <div class="navbar-nav">
         {% if user.is_authenticated %}
-        <a href="" class="btn btn-outline-secondary mr-2">Профиль</a>
-        <a href=" {% url 'exit' %} " class="btn btn-outline-secondary">Выйти</a>
+          <a href="{% url 'profile' %}" class="btn btn-outline-secondary mr-2">Профиль</a>
+          <a href=" {% url 'exit' %} " class="btn btn-outline-secondary">Выйти</a>
         {% else %}
-        <a href=" {% url 'reg' %} " class="btn btn-outline-secondary mr-2">Регистрация</a>
-        <a href=" {% url 'user' %} " class="btn btn-outline-secondary mr-2">Войти</a>
+          <a href=" {% url 'reg' %} " class="btn btn-outline-secondary mr-2">Регистрация</a>
+          <a href=" {% url 'user' %} " class="btn btn-outline-secondary ">Войти</a>
         {% endif %}
     </div>
   </nav>
@@ -48,6 +48,7 @@
                 </div>
                {% endfor %}
              {% endif %}
+
              {% block main_section %}
              {% endblock%}
          </div>
